feat: openapi update, dto update, schema bugs fix
